examples/service.yml
apiVersion: v1
kind: Service
metadata:
  name: redhat-interview
  labels:
    run: redhat-interview
spec:
  ports:
  - port: 42
    protocol: TCP
  selector:
    run: redhat-interview
