examples/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: interview-ingress
spec:
  backend:
    serviceName: redhat-interview
    servicePort: 42
